--- a/09/nav_bar/nav_bar.html
+++ b/09/nav_bar/nav_bar.html
@@ -40,19 +40,61 @@ body {
 	font: 62.5% Verdana, Arial, Helvetica, sans-serif;
 	padding: 20px;
 }
-
+.mainNav{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+  .mainNav a{
+    color: #000;
+    font-size: 11px;
+    text-transform: uppercase;
+    text-decoration: none;
+    border: 1px dashed #999;
+    border-right: none;
+    padding: 7px 5px 7px 30px;
+    display: block;
+    background-color: #E7E7E7;
+    background-image: url("images/nav.png");
+    background-repeat: no-repeat;
+    background-position: 0 2px;
+  }
+  .mainNav li:last-of-type a{
+    border-right: 1px dashed #999;
+  }
+  .mainNav a:hover{
+    font-weight: bold;
+    background-color: #B2F511;
+    background-position: 3px 50%;
+  }
+  .home .homeLink,
+  .feature .featureLink,
+  .expert .expertLink,
+  .quiz .quizLink,
+  .project .projectLink,
+  .horoscope .horoscopeLink{
+    background-color: #FFFFFF;
+    background-position: 3px 100%;
+    padding-right: 15px;
+    padding-left: 30px;
+    font-weight: bold;
+  }
+  .mainNav li{
+    float: left;
+    width: 12em;
+  }
 
 
 </style>
 </head>
-<body>
-  <ul>
-    <li><a href="/index.html">Home</a></li>
-    <li><a href="/features/">Features</a></li>
-    <li><a href="/experts/">Experts</a></li>
-    <li><a href="/quiz/">Quiz</a></li>
-    <li><a href="/projects/">Projects</a></li>
-    <li><a href="/horoscopes/">Horoscopes</a></li>
+<body class="home">
+  <ul class="mainNav">
+    <li><a href="/index.html" class="homeLink">Home</a></li>
+    <li><a href="/features/" class="featureLink">Features</a></li>
+    <li><a href="/experts/" class="expertLink">Experts</a></li>
+    <li><a href="/quiz/" class="quizLink">Quiz</a></li>
+    <li><a href="/projects/" class="projectLink">Projects</a></li>
+    <li><a href="/horoscopes/" class="horoscopeLink">Horoscopes</a></li>
   </ul>
 </body>
 </html>
