--- a/14/index.html
+++ b/14/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-<h1>The Hat Gallery <img src="images/hat.png" width="130" height="140" alt="The Hat Gallery" class="badge"></h1>
+<h1>The Hat Gallery <img src="images/hat.png" class="badge" width="130" height="140" alt="The Hat Gallery"></h1>
 <nav>
 	<ul>
 		<li><a href="#">Home</a></li>
